<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/cinzaClaro"
    tools:context=".CorridaPass"
    >

    <org.osmdroid.views.MapView
        android:id="@+id/mapView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etBarraDePesquisa"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="24dp"
        android:background="@drawable/caixa_edit_text"
        android:backgroundTint="@color/cinzaEscuro"
        android:fontFamily="@font/inter_18pt_black"
        android:hint="@string/appHintParaOnde"
        android:inputType="text"
        android:padding="12dp"
        android:textColor="@color/branco"
        android:textColorHint="@color/cinzaClaro"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/btnLimparPesquisa"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:backgroundTint="@color/cinzaHint"
        android:fontFamily="@font/inter_18pt_black"
        android:text="@string/appBtnLimpar"
        android:textColor="@color/cinza"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.83"
        app:layout_constraintHorizontal_bias="1.0"
    />

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="0dp"
        android:layout_height="150dp"
        android:background="@color/cinzaEscuro"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">


        <LinearLayout
            android:layout_width="200dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txtPreco"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="7dp"
                android:text="R$00.00"
                android:textColor="@color/branco"
                android:textSize="23sp"
                android:fontFamily="@font/inter_18pt_black"
                />

            <TextView
                android:id="@+id/txtDistância"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="7dp"
                android:fontFamily="@font/inter_18pt_black"
                android:text="00.0km"
                android:textColor="@color/branco"
                android:textSize="23sp" />

            <TextView
                android:id="@+id/txtTempo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="7dp"
                android:fontFamily="@font/inter_18pt_black"
                android:text="00min"
                android:textColor="@color/branco"
                android:textSize="23sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="200dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <Button
                android:id="@+id/btnConfirmar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:backgroundTint="@color/cinzaHint"
                android:textColor="@color/cinza"
                android:text="@string/appBtnConfirmar"
                android:fontFamily="@font/inter_18pt_black"
                android:enabled="false"
                />

            <Button
                android:id="@+id/btnCancelar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:backgroundTint="@color/vermelho"
                android:text="@string/appBtnCancelar"
                android:textColor="@color/branco"
                android:fontFamily="@font/inter_18pt_black"
                />
        </LinearLayout>

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>
